@@ -203,6 +203,7 @@ PHP if you have not done so prior to upgrading MediaWiki.
 * (bug 27688) Simplify queries to list user block information
 * (bug 27708) list=users does not have a property to return user id
 * (bug 27715) imageinfo didn't respect revdelete
+* (bug 27862) Useremail module didn't properly return success on success.
 
 === Languages updated in 1.18 ===
 
